cannot find symbol class BASE64Encoder